--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <head>
 	<style type="text/css"> 
 	body
@@ -9,28 +9,28 @@
 	a {
 		color:#fff;
 		text-decoration: none;
-	} /* ÒÑ»òÎ´·ÃÎÊÁ´½ÓÑÕÉ« */
+	} /* å·²æˆ–æœªè®¿é—®é“¾æŽ¥é¢œè‰² */
 		
 	a:hover {
 		color:#ddd;	
 		text-decoration: none;
-	} /* ÐüÍ£Ê±Á´½ÓÑÕÉ« */
+	} /* æ‚¬åœæ—¶é“¾æŽ¥é¢œè‰² */
 
 		
 	
     </style>
-	<title>361È«¾°ÉãÓ°</title>
+	<title>361å…¨æ™¯æ‘„å½±</title>
 
 <body>
 
-<h1 id="title" align="center" >361È«¾°ÉãÓ°</h1><br><br><br>
+<h1 id="title" align="center" >361å…¨æ™¯æ‘„å½±</h1><br><br><br>
 
-<h2 name="sub" align="center">×÷Æ·£º<br><br>
+<h2 name="sub" align="center">ä½œå“ï¼š<br><br>
 
 <div align="center">
-	<a name="file" href="/0">ÎÄ²ý¸ó</a><br>
-	<a name="file" href="/1">ËÕÇø±ø¹¤³§</a><br>
-	<a name="file" href="/2">ÌúË÷ÇÅ</a><br>
+	<a name="file" href="/0">æ–‡æ˜Œé˜</a><br>
+	<a name="file" href="/1">è‹åŒºå…µå·¥åŽ‚</a><br>
+	<a name="file" href="/2">é“ç´¢æ¡¥</a><br>
 </div>
 
 <br>
