--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
 	  }
 	  
 	a {
-		color:#fff;
+		color:#aaa;
 		text-decoration: none;
 	} /* 已或未访问链接颜色 */
 		
 	a:hover {
-		color:#ddd;	
+		color:#fff;	
 		text-decoration: none;
 	} /* 悬停时链接颜色 */
+	
+	#foot{
+		color:#000;
+		font-size:14px;
+	}
 
 		
 	
@@ -32,6 +37,12 @@
 	<a name="file" href="/0">文昌阁</a><br>
 	<a name="file" href="/1">苏区兵工厂</a><br>
 	<a name="file" href="/2">铁索桥</a><br>
+</div>
+
+<br><br>
+
+<div id="foot" align="center" >
+Copyright © 2017 - 2018 361all. All Rights Reserved.
 </div>
 
 <br>
