--- a/index.html
+++ b/index.html
@@ -20,8 +20,18 @@
 		color:#000;
 		font-size:14px;
 	}
-
-		
+	
+	#title{
+		font-size:50px;
+	}	
+	
+	#sub{
+		font-size:40px;
+	}		
+	
+	#content{
+		font-size:30px;
+	}	
 	
     </style>
 	<meta charste="utf-8">
@@ -29,11 +39,11 @@
 
 <body>
 
-<h1 id="title" align="center" >361全景摄影</h1><br><br><br>
+<h1 id="title" align="center" >361全景摄影</h1><br><br>
 
-<h2 name="sub" align="center">作品：<br><br>
+<h2 id="sub" name="sub" align="center">作品：<br><br>
 
-<div align="center">
+<div id="content" align="center">
 	<a name="file" href="/0">文昌阁</a><br>
 	<a name="file" href="/1">苏区兵工厂</a><br>
 	<a name="file" href="/2">铁索桥</a><br>
