--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
 	
     </style>
 	<meta charste="utf-8">
-	<title>361全景摄影</title>
+	<title>361全景</title>
 
 <body>
 
-<h1 id="title" align="center" >361全景摄影</h1><br><br>
+<h1 id="title" align="center" >361全景</h1><br><br>
 
 <h2 id="sub" name="sub" align="center">作品：<br><br>
 
