--- a/index.html
+++ b/index.html
@@ -38,21 +38,27 @@
 	<title>361全景</title>
 
 <body>
-
+<!--div><iframe src="http://182.61.17.142/pages/utensils/34" width="100%" height=1000></iframe></div-->
 <h1 id="title" align="center" >361全景</h1><br><br>
 
-<h2 id="sub" name="sub" align="center">作品：<br><br>
+<h2 id="sub" name="sub" align="center">*作品*<br><br>
 
 <div id="content" align="center">
 	<a name="file" href="/0">文昌阁</a><br>
 	<a name="file" href="/1">苏区兵工厂</a><br>
 	<a name="file" href="/2">铁索桥</a><br>
+	<a name="file" href="/3">龙文塔</a><br>
+	<a name="file" href="/4">西溪湿地</a><br>
+	<a name="file" href="/5">云洞岩</a><br>
 </div>
 
 <br><br>
 
 <div id="foot" align="center" >
-Copyright © 2017 - 2018 361all. All Rights Reserved.
+Copyright © 2017 - 2018 361all. All Rights Reserved.<br>
+<a name="file" href="/help">帮助</a>
+<a name="file" href="/about">关于</a>
+<a name="file" href="/email">联系</a>
 </div>
 
 <br>
