--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 
 <div id="foot" align="center" >
 Copyright © 2017 - 2018 361all. All Rights Reserved.<br>
-<a name="file" href="/help">帮助</a>
-<a name="file" href="/about">关于</a>
-<a name="file" href="/email">联系</a>
+<a href="/help">帮助</a>
+<a href="/about">关于</a>
+<a href="/email">联系</a>
 </div>
 
 <br>
