--- a/login.html
+++ b/login.html
@@ -1,34 +1,13 @@
 <html>
 <head>
-<script type="text/javascript">
-function loadXMLDoc()
-{
-var xmlhttp;
-if (window.XMLHttpRequest)
-  {// code for IE7+, Firefox, Chrome, Opera, Safari
-  xmlhttp=new XMLHttpRequest();
-  }
-else
-  {// code for IE6, IE5
-  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
-  }
-xmlhttp.onreadystatechange=function()
-  {
-  if (xmlhttp.readyState==4 && xmlhttp.status==200)
-    {
-    document.getElementById("myDiv").innerHTML=xmlhttp.responseText;
-    }
-  }
-xmlhttp.open("GET","http://www.w3school.com.cn/ajax/demo_get2.asp?fname=Bill&lname=Gates",true);
-xmlhttp.send();
-}
-</script>
+
 </head>
 <body>
+<iframe src="http://182.61.17.142/pages/birds_search" id="iframepage" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+onLoad="this.height=body.offsetHeight;this.width=body.offsetWidth"></iframe>
 
-<h2>AJAX</h2>
-<button type="button" onclick="loadXMLDoc()">请求数据</button>
-<div id="myDiv"></div>
+
 
 </body>
+
 </html>
