--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
 </head>
 <body>
-<iframe src="http://182.61.17.142/pages/birds_search" id="iframepage" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
+<iframe src="http://182.61.17.142/pano/login" id="iframepage" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
 onLoad="this.height=body.offsetHeight;this.width=body.offsetWidth"></iframe>
 
 
