--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <h2 id="sub" name="sub" align="center">*作品*<br><br>
 
 <div id="content" align="center">
-	<a name="file" href="/0">文昌阁</a><br>
+	<!--a name="file" href="/0">文昌阁</a><br-->
 	<a name="file" href="/1">苏区兵工厂</a><br>
 	<a name="file" href="/2">铁索桥</a><br>
 	<a name="file" href="/3">龙文塔</a><br>
@@ -59,6 +59,7 @@ Copyright © 2017 - 2018 361all. All Rights Reserved.<br>
 <a href="/help">帮助</a>
 <a href="/about">关于</a>
 <a href="/email">联系</a>
+<a href="login.html">取照</a>
 </div>
 
 <br>
