--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
 <div id="foot" align="center" >
 Copyright © 2017 - 2018 361all. All Rights Reserved.<br>
 <a href="#">帮助</a>
-<a href="#">关于</a>
-<a href="mailto:3378270384@qq.com">联系</a>
-<a href="login.html">取照</a>
+<!--a href="mailto:3378270384@qq.com">邮箱取照</a-->
+<a href="email.html">邮箱取照</a>
+<a href="login.html">自助取照</a>
 </div>
 
 <br>
