--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 <div id="foot" align="center" >
 Copyright © 2017 - 2018 361all. All Rights Reserved.<br>
-<a href="#">帮助</a>
+<a href="help.html">帮助</a>
 <!--a href="mailto:3378270384@qq.com">邮箱取照</a-->
 <a href="email.html">邮箱取照</a>
 <a href="login.html">自助取照</a>
