--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <head>
 	<style type="text/css"> 
 	body
@@ -39,9 +39,9 @@
 
 <body>
 
-<h1 id="title" align="center" >361全景</h1><br><br>
+<h1 id="title" align="center" >361全景</h1><br>
 
-<h2 id="sub" name="sub" align="center">*作品*<br><br>
+<h2 id="sub" name="sub" align="center">*作品*<br>
 
 <div id="content" align="center">
 	<!--a name="file" href="/0">文昌阁</a><br-->
@@ -53,7 +53,7 @@
 
 </div>
 
-<br><br>
+<br>
 
 <div id="foot" align="center" >
 Copyright © 2017 - 2018 361all. All Rights Reserved.<br>
@@ -87,7 +87,7 @@ function IsPC() {
 if(IsPC()!=true)
 {	
 	document.getElementById('title').style.fontSize="108px";
-	document.getElementById('foot').style.fontSize="30px";
+	document.getElementById('foot').style.fontSize="20px";
 
 	var aDoms = document.getElementsByName('file'), 
     oL= aDoms.length; 
