--- a/index.html
+++ b/index.html
@@ -95,21 +95,8 @@ function IsPC() {
 
 if(IsPC()!=true)
 {	
-	document.getElementById('title').style.fontSize="108px";
 	document.getElementById('foot').style.fontSize="25px";
-	document.getElementById('foot').style.fontSize="36px";
-
-	var aDoms = document.getElementsByName('file'), 
-    oL= aDoms.length; 
-	for(var k=0;k<oL;k++){ 
-	   aDoms[k].style.fontSize="72px";
-	}
-	
-	var aDoms2 = document.getElementsByName('sub'), 
-    oL2= aDoms2.length; 
-	for(var k2=0;k2<oL2;k2++){ 
-	   aDoms2[k2].style.fontSize="96px";
-	}
+	document.getElementById('foots').style.fontSize="36px";
 
 }
  </script>
