--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@ function IsPC() {
 
 if(IsPC()!=true)
 {	
+	document.getElementById('title').style.fontSize="72px";
+	document.getElementById('sub').style.fontSize="48px";
+	document.getElementById('content').style.fontSize="42px";
 	document.getElementById('foot').style.fontSize="25px";
 	document.getElementById('foots').style.fontSize="36px";
 
