--- a/help.html
+++ b/help.html
@@ -30,9 +30,14 @@ A：通过任一全景图平台即可。<br>
 
 Q：如何在本机浏览？<br>
 A：下载任一款全景图软件即可。<br>
-参考：insta360
+参考一：insta360
 <a href="https://static.insta360.com/software/Studio/Windows/Insta360Studio_Win_x64_V2.12.0.exe">PC端Windows 下载</a>
 <a href="https://static.insta360.com/software/Studio/Mac/Insta360Studio_Mac_2.12.0.pkg">PC端Mac OSX 下载</a>
+<br>
+
+参考二：Panorado 
+<a href="http://rj.baidu.com/soft/detail/18103.html">下载</a>
+
 <br><br>
 <br>
 <a href="http://361all.com/">返回首页</a>
