--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <h1 id="title" align="center" >361全景</h1><br>
 
-<h2 id="sub" name="sub" align="center">*作品*<br>
+<h2 id="sub" name="sub" align="center">*作品*<br><br>
 
 <div id="content" align="center">
 	<!--a name="file" href="/0">文昌阁</a><br-->
@@ -54,6 +54,7 @@
 	<a name="file" href="/2">铁索桥</a><br>
 	<a name="file" href="/5">云洞岩</a><br>
 	<a name="file" href="/4">西溪湿地</a><br>
+	<a name="file" href="/6">车站</a><br>
 	<a name="file" href="/1">苏区兵工厂</a><br>
 
 </div>
@@ -96,10 +97,10 @@ function IsPC() {
 if(IsPC()!=true)
 {	
 	document.getElementById('title').style.fontSize="72px";
-	document.getElementById('sub').style.fontSize="48px";
-	document.getElementById('content').style.fontSize="42px";
-	document.getElementById('foot').style.fontSize="25px";
-	document.getElementById('foots').style.fontSize="36px";
+	document.getElementById('sub').style.fontSize="54px";
+	document.getElementById('content').style.fontSize="48px";
+	document.getElementById('foot').style.fontSize="28px";
+	document.getElementById('foots').style.fontSize="42px";
 
 }
  </script>
