--- a/help.html
+++ b/help.html
@@ -9,8 +9,8 @@ A：一般三四天，最多不会超过七个工作日。<br><br>
 
 Q：照片是什么格式的？<br>
 A：jpg格式，长宽比为2：1，默认尺寸为8192*4096 px；<br>可直接用于大多全景图平台、全景图软件。<br>
-需要其他尺寸请拍照时说明，最大可到一亿像素（14400px*7200 px）。<br>
-不是尺寸越大越好，大的尺寸会影响加载和显示。<br><br>
+需要其他尺寸请拍照时说明，最大可到一亿像素（14400px*7200 px）。<!--br>
+不是尺寸越大越好，大的尺寸会影响加载和显示。<br--><br><br>
 
 Q：是否接受预约？<br>
 A：暂不接受预约。<br><br>
@@ -24,7 +24,10 @@ A：通过任一全景图平台即可。<br>
 <a href="http://www.360doc.com/content/18/0112/23/31812166_721465197.shtml">参考一</a>
 <a href="http://www.yxtvg.com/toutiao/5047158/20180112A10X5X00.html">参考二</a><br>
 
-平台三：米家相机（移动端）
+平台三：VEER
+<a href="https://veervr.tv">入口</a><br>
+
+平台四：米家相机（移动端）
 <a href="http://app.mi.com/details?id=com.madv360.madv">入口</a><br><br>
 
 
