--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 	<a name="file" href="/2">铁索桥</a><br>
 	<a name="file" href="/5">云洞岩</a><br>
 	<a name="file" href="/4">西溪湿地</a><br>
-	<a name="file" href="/6">车站</a><br>
+	<a name="file" href="/6">火车站</a><br>
 	<a name="file" href="/1">苏区兵工厂</a><br>
+	<a name="file" href="/c/whcjdq.jpg">长图全景</a><br>
 
 </div>
 
