--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
 
 <div id="content" align="center">
 	<!--a name="file" href="/0">文昌阁</a><br-->
-	<a name="file" href="/3">龙文塔</a><br>
-	<a name="file" href="/2">铁索桥</a><br>
-	<a name="file" href="/5">云洞岩</a><br>
+	<a name="file" href="/3">龙文塔</a> <a name="file" href="/2">铁索桥</a><br>
+	<a name="file" href="/5">云洞岩</a> <a name="file" href="/6">火车站</a><br>
+	<a name="file" href="/7">古祠堂</a> <a name="file" href="/8">夜塔楼</a> <br>
 	<a name="file" href="/4">西溪湿地</a><br>
-	<a name="file" href="/6">火车站</a><br>
 	<a name="file" href="/1">苏区兵工厂</a><br>
 	<a name="file" href="/c/whcjdq.jpg">长图全景</a><br>
 
