--- a/s/2/index.html
+++ b/s/2/index.html
@@ -9,6 +9,20 @@ body{
 	background:#069;
 }
 
+.loading {width:200px;height:200px;top:200px;position:relative;margin:50px auto;border:1px solid #f90;border-radius:50%;}
+.info{line-height:200px;text-align:center;top:-50px;font-size:30px;color:#fff;}
+.dot {width:100%;;height:100%;animation:rond .8s infinite;-webkit-animation:rond 3s infinite;}
+.dot:after {width:10px;height:10px;position:absolute;top:-5px;left:90px;content:"";display:table;background-color:#f50;border-radius:50%;}
+.num {width:100%;height:100%;position:absolute;top:80px;left:0;text-align:center;font-size:20px;color:#fff;}
+@keyframes rond {
+	0% {transform:rotate(0deg);}
+	100% {transform:rotate(360deg);}
+}
+@-webkit-keyframes rond {
+	0% {-webkit-transform:rotate(0deg);}
+	100% {-webkit-transform:rotate(360deg);}
+} 
+
 #main{	
 	position: relative;
 	width: 184px;
@@ -97,6 +111,11 @@ body{
 	</style>
 </head>
 <body>
+<div id="loading" class="loading">	
+	<div class="dot"></div>
+	<div class="num" id="num">加载中<br>0%</div>
+	<div class="info">洛神赋图</div>
+</div>
 <div id="main">
 	
 	<div id="sb1" class="side"></div>
@@ -214,7 +233,45 @@ body{
 		}
 	};
 	
+	
+	
     window.onload=function (){
+	
+	/* preload */
+	var newimages=[];
+	function preloadimages(arr){
+		
+		var arr=(typeof arr!="object")? [arr] : arr  ;
+		for (var i=0; i<arr.length; i++){
+			newimages[i]=new Image();
+			newimages[i].src="img/"+arr[i];			
+		}
+	}		
+	preloadimages([
+	"1s1.jpg","1s2.jpg","1s3.jpg","1s4.jpg","1s5.jpg","1s6.jpg","1up.png","1bottom.png",
+	"2s1.jpg","2s2.jpg","2s3.jpg","2s4.jpg","2s5.jpg","2s6.jpg","2up.png","2bottom.png",
+	"3s1.jpg","3s2.jpg","3s3.jpg","3s4.jpg","3s5.jpg","3s6.jpg","3up.png","3bottom.png",
+	"4s1.jpg","4s2.jpg","4s3.jpg","4s4.jpg","4s5.jpg","4s6.jpg","4up.png","4bottom.png",
+	"as1.jpg","as2.jpg","as3.jpg","as4.jpg","as5.jpg","as6.jpg","aup.png","abottom.png",
+	"bs1.jpg","bs2.jpg","bs3.jpg","bs4.jpg","bs5.jpg","bs6.jpg","bup.png","bbottom.png",
+	"deng.png","ye.png","ye1.png"]);
+	
+	var ready=0;
+	var imgLoad=setInterval(function(){ 
+		if(ready==newimages.length) 
+		{
+			clearInterval(imgLoad);
+			document.getElementById('loading').style.display="none";
+			return;
+		}	
+		ready=0;
+		for (var i=0; i<newimages.length; i++) if(newimages[i].height)ready++;
+		document.getElementById('num').innerHTML="加载中<br>"+parseInt(100*ready/newimages.length)+"%";		
+	}, 100);
+	
+	/* preload end */
+	
+	
         oMain.style['transform']=oMain.style['-webkit-transform'] ="rotateX(-20deg) rotateY(0deg) rotateZ(270deg)";
 		for(var i=1;i<=6;i++)
 		{
