--- a/s/2/index.html
+++ b/s/2/index.html
@@ -67,6 +67,12 @@ body{
 	top:-129px;
 }
 
+.hua{
+	width: 106px;
+    height: 140px;
+	top:51px;
+}
+
 .deng{
 	width: 240px;
     height: 430px;
@@ -96,7 +102,7 @@ body{
 #main{	
 	position: absolute;
 	left:50%;
-	top:100px;
+	top:180px;
 	margin-left:-90px;
 
 }
@@ -104,7 +110,7 @@ body{
 #pic{
 	position: relative;
 	left:50%;
-	top:550px;
+	top:600px;
 	margin-left:-180px;
 }
 
@@ -138,6 +144,15 @@ body{
 	<div id="s7" class="up"></div>
     <div id="s8" class="bottom"></div>
 	
+	<div id="sf1" class="side"></div>
+    <div id="sf2" class="side"></div>
+    <div id="sf3" class="side"></div>
+    <div id="sf4" class="side"></div>
+    <div id="sf5" class="side"></div>
+    <div id="sf6" class="side"></div>
+	<div id="sf7" class="up"></div>
+    <div id="sf8" class="bottom"></div>  
+	
 	<div id="y1" class="ye"></div>
     <div id="y2" class="ye"></div>
     <div id="y3" class="ye"></div>
@@ -151,6 +166,13 @@ body{
     <div id="y14" class="ye1"></div>
     <div id="y15" class="ye1"></div>
     <div id="y16" class="ye1"></div>
+	
+	<div id="h1" class="hua"></div>
+    <div id="h2" class="hua"></div>
+    <div id="h3" class="hua"></div>
+    <div id="h4" class="hua"></div>
+    <div id="h5" class="hua"></div>
+    <div id="h6" class="hua"></div>
 	
 	<div id="d1" class="deng"></div>
     <div id="d2" class="deng"></div>
@@ -202,6 +224,7 @@ body{
 	var oMain=document.getElementById('main');
 	var oPic=document.getElementById('pic');
 	var picn=new Array("s1.jpg","s2.jpg","s3.jpg","s4.jpg","s5.jpg","s6.jpg","up.png","bottom.png"); 
+	var piccn=new Array("cs1.png","cs2.png","cs3.png","cs4.png","cs5.png","cs6.png","cup.png","cbottom.png"); 
 	var imgn=new Array("1","2","a","3","4","b"); 
 	
 	function move(a,b)
@@ -214,23 +237,49 @@ body{
 		var z=parseFloat (oMain.style['-webkit-transform'].split('rotateZ(')[1].split('deg')[0])+(a);
 		z=-90;
 		oMain.style['transform']=oMain.style['-webkit-transform'] ="rotateX("+x+"deg) rotateY("+y+"deg) rotateZ("+z+"deg)";
+		
+		
+		var cycle=360*4;
+		dOpc=getOpacity3(1-(mod(y+720,cycle)/cycle),2.5,-2.8);
+		sOpc=getOpacity2(1-(mod(y,60)/60),1.5);
+		yOpc=getOpacity3(1-(mod(y,cycle)/cycle),0.8,-2.4);
+		hOpc=getOpacity3(1-(mod(y,cycle)/cycle),0.9,-4);
+		y1Opc=getOpacity3(1-(mod(y,cycle)/cycle),0.8,-1.4);
+		if(dOpc==0) sbOpc=1;
+		else {
+			sbOpc=1-dOpc;
+			if(sOpc>sbOpc) sOpc=sbOpc;					
+		};
+		
+		
 		//oPic.innerHTML=mod(Math.floor((y+30)/60),6);
-		oPic.style.backgroundImage="url('img/"+imgn[mod(Math.floor((y-30)/60),6)]+"s"+(mod(Math.floor((y+30)/60),6)+1)+".jpg')";
+		if(dOpc==0) oPic.style.backgroundImage="url('img/"+imgn[mod(Math.floor((y-30)/60),6)]+"s"+(mod(Math.floor((y+30)/60),6)+1)+".jpg')";
+		else oPic.style.backgroundImage="url('img/cs"+(mod(Math.floor((y+30)/60),6)+1)+".png')";
 		oPic.style.opacity = getOpacity(mod(y+30,60)/60,1.5);
+		
+		
 	
 		for(var i=1;i<=8;i++)
 		{
+			document.getElementById('sf'+i).style.backgroundImage="url('img/"+piccn[i-1]+"')";
+			document.getElementById('sf'+i).style.opacity=dOpc;
+					
 			document.getElementById('s'+i).style.backgroundImage="url('img/"+imgn[mod(Math.floor((y-60)/60),6)]+picn[i-1]+"')";
 			document.getElementById('sb'+i).style.backgroundImage="url('img/"+imgn[mod(Math.floor((y)/60),6)]+picn[i-1]+"')";
-			document.getElementById('s'+i).style.opacity= getOpacity2(1-(mod(y,60)/60),1.5);
+			
+			document.getElementById('s'+i).style.opacity= sOpc;
+			document.getElementById('sb'+i).style.opacity= sbOpc;
+			
 		}
 		
 		for(var i=1;i<=6;i++)
 		{
 			//document.getElementById('y'+i).style.backgroundImage="url('img/"+imgn[mod(Math.floor((y)/60),6)]+picn[i-1]+"')";
-			document.getElementById('y'+i).style.opacity= getOpacity3(1-(mod(y,1080)/1080),0.8,-2.4);
-			document.getElementById('y1'+i).style.opacity= getOpacity3(1-(mod(y,1080)/1080),0.8,-2.2);
-			document.getElementById('d'+i).style.opacity= getOpacity3(1-(mod(y+360,1080)/1080),1.4,-3.4);
+			document.getElementById('y'+i).style.opacity= yOpc;
+			document.getElementById('h'+i).style.opacity= hOpc;
+			document.getElementById('y1'+i).style.opacity= y1Opc;
+			document.getElementById('d'+i).style.opacity= dOpc
+			//console.log(document.getElementById('d'+i).style.opacity);
 		
 		}
 	};
@@ -256,7 +305,8 @@ body{
 	"4s1.jpg","4s2.jpg","4s3.jpg","4s4.jpg","4s5.jpg","4s6.jpg","4up.png","4bottom.png",
 	"as1.jpg","as2.jpg","as3.jpg","as4.jpg","as5.jpg","as6.jpg","aup.png","abottom.png",
 	"bs1.jpg","bs2.jpg","bs3.jpg","bs4.jpg","bs5.jpg","bs6.jpg","bup.png","bbottom.png",
-	"deng.png","ye.png","ye1.png"]);
+	"cs1.png","cs2.png","cs3.png","cs4.png","cs5.png","cs6.png","cup.png","cbottom.png",
+	"deng.png","ye.png","ye1.png","hua.png"]);
 	
 	var ready=0;
 	var imgLoad=setInterval(function(){ 
@@ -279,6 +329,8 @@ body{
         oMain.style['transform']=oMain.style['-webkit-transform'] ="rotateX(-20deg) rotateY(0deg) rotateZ(270deg)";
 		for(var i=1;i<=6;i++)
 		{
+			document.getElementById('sf'+i).style['transform']=
+			document.getElementById('sf'+i).style['-webkit-transform']=
 			document.getElementById('s'+i).style['transform']=
 			document.getElementById('s'+i).style['-webkit-transform']=
 			document.getElementById('sb'+i).style['transform']=
@@ -287,24 +339,29 @@ body{
 			
 			document.getElementById('y'+i).style['transform']=
 			document.getElementById('y'+i).style['-webkit-transform']=
-			"rotateX("+(-60+60*i)+"deg) translateZ(281px) rotateZ(90deg) translateY(105px) rotateX(124deg)";	
+			"rotateX("+(-60+60*i)+"deg) translateZ(283px) rotateZ(90deg) translateY(105px) rotateX(126deg)";	
 			document.getElementById('y'+i).style.backgroundImage="url('img/ye.png')";
 			
 			document.getElementById('y1'+i).style['transform']=
 			document.getElementById('y1'+i).style['-webkit-transform']=
-			"rotateX("+(-30+60*i)+"deg) translateZ(272px) rotateZ(90deg) translateY(95px) rotateX(120deg)";	
+			"rotateX("+(-30+60*i)+"deg) translateZ(274px) rotateZ(90deg) translateY(95px) rotateX(122deg)";	
 			document.getElementById('y1'+i).style.backgroundImage="url('img/ye1.png')";
 			
 			document.getElementById('d'+i).style['transform']=
 			document.getElementById('d'+i).style['-webkit-transform']=
 			"rotateX("+(-30+60*i)+"deg) translateZ(120px) translateX(-75px) rotateX(-90deg) rotateZ(90deg) ";	
 			document.getElementById('d'+i).style.backgroundImage="url('img/deng.png')";
+			
+			document.getElementById('h'+i).style['transform']=
+			document.getElementById('h'+i).style['-webkit-transform']=
+			"rotateX("+(-30+60*i)+"deg) translateZ(50px) translateX(225px) rotateX(-90deg) rotateZ(90deg) ";	
+			document.getElementById('h'+i).style.backgroundImage="url('img/hua.png')";
 		}
 	
         oMain.onmousedown = function(ev){ return move0(ev,move);};
         oMain.ontouchstart = function(ev){ return move1(ev,move);};
 		oMain.onmousewheel = function(ev){ return move2(ev,move); };
-        move(0,0);
+        move(360,0);
     }
 
     function move0(ev,mvfn)
