--- a/s/2/index.html
+++ b/s/2/index.html
@@ -122,7 +122,7 @@ body{
 <div id="loading" class="loading">	
 	<div class="dot"></div>
 	<div class="num" id="num">加载中<br>0%</div>
-	<div class="info">洛神赋图</div>
+	<div class="info">四季</div>
 </div>
 <div id="main">
 	
