--- a/s/2/index.html
+++ b/s/2/index.html
@@ -23,6 +23,11 @@ body{
 	100% {-webkit-transform:rotate(360deg);}
 } 
 
+
+#box{
+	display:none;
+}
+
 #main{	
 	position: relative;
 	width: 184px;
@@ -32,6 +37,7 @@ body{
 	top:250px;
     transform-style: preserve-3d;
 	display:none;
+
 }
 
 #pic{
@@ -43,6 +49,14 @@ body{
 	border:1px solid #fff;
 	-webkit-transform:rotateZ(0deg);
 	background-size:100% 100%; 
+	display:none;
+}
+
+#picinfo{
+	position: absolute;
+	top:635px;
+	left:28%;
+	color:#fff;
 	display:none;
 }
 
@@ -115,6 +129,21 @@ body{
 
 @media screen and (max-device-width:640px){
 
+#box{	
+	position: fixed;
+	top: 0px;
+	bottom: 0px;
+	width: 100%;
+	height: 100%;
+}
+
+#picinfo{
+	position: absolute;
+	top:540px;
+	left:45%;
+	color:#fff;
+}
+
 #main{	
 	position: absolute;
 	left:50%;
@@ -145,89 +174,94 @@ body{
 	<div class="num" id="num">加载中<br>0%</div>
 	<div class="info">四季</div>
 </div>
-<div id="main">
-	
-	<div id="sb1" class="side"></div>
-    <div id="sb2" class="side"></div>
-    <div id="sb3" class="side"></div>
-    <div id="sb4" class="side"></div>
-    <div id="sb5" class="side"></div>
-    <div id="sb6" class="side"></div>
-	<div id="sb7" class="up"></div>
-    <div id="sb8" class="bottom"></div>  
-  	
-	<div id="s1" class="side"></div>
-    <div id="s2" class="side"></div>
-    <div id="s3" class="side"></div>
-    <div id="s4" class="side"></div>
-    <div id="s5" class="side"></div>
-    <div id="s6" class="side"></div>
-	<div id="s7" class="up"></div>
-    <div id="s8" class="bottom"></div>
-	
-	<div id="sf1" class="side"></div>
-    <div id="sf2" class="side"></div>
-    <div id="sf3" class="side"></div>
-    <div id="sf4" class="side"></div>
-    <div id="sf5" class="side"></div>
-    <div id="sf6" class="side"></div>
-	<div id="sf7" class="up"></div>
-    <div id="sf8" class="bottom"></div>  
-	
-	<div id="y1" class="ye"></div>
-    <div id="y2" class="ye"></div>
-    <div id="y3" class="ye"></div>
-    <div id="y4" class="ye"></div>
-    <div id="y5" class="ye"></div>
-    <div id="y6" class="ye"></div>
-	
-	<div id="y11" class="ye1"></div>
-    <div id="y12" class="ye1"></div>
-    <div id="y13" class="ye1"></div>
-    <div id="y14" class="ye1"></div>
-    <div id="y15" class="ye1"></div>
-    <div id="y16" class="ye1"></div>
-	
-	<div id="h1" class="hua"></div>
-    <div id="h2" class="hua"></div>
-    <div id="h3" class="hua"></div>
-    <div id="h4" class="hua"></div>
-    <div id="h5" class="hua"></div>
-    <div id="h6" class="hua"></div>
-	
-	<div id="d1" class="deng"></div>
-    <div id="d2" class="deng"></div>
-    <div id="d3" class="deng"></div>
-    <div id="d4" class="deng"></div>
-    <div id="d5" class="deng"></div>
-    <div id="d6" class="deng"></div>
-	
-	<div id="sn1" class="snow"></div>
-    <div id="sn2" class="snow"></div>
-	<div id="sn3" class="snow"></div>
-    <div id="sn4" class="snow"></div>
-	<div id="sn5" class="snow"></div>
-    <div id="sn6" class="snow"></div>
-	
-	<div id="sn11" class="snow"></div>
-    <div id="sn12" class="snow"></div>
-	<div id="sn13" class="snow"></div>
-    <div id="sn14" class="snow"></div>
-	<div id="sn15" class="snow"></div>
-    <div id="sn16" class="snow"></div>
-	
-	<div id="sn21" class="snow"></div>
-    <div id="sn22" class="snow"></div>
-	<div id="sn23" class="snow"></div>
-    <div id="sn24" class="snow"></div>
-	<div id="sn25" class="snow"></div>
-    <div id="sn26" class="snow"></div>
+<div id="box">
+	<div id="main">
+		
+		<div id="sb1" class="side"></div>
+		<div id="sb2" class="side"></div>
+		<div id="sb3" class="side"></div>
+		<div id="sb4" class="side"></div>
+		<div id="sb5" class="side"></div>
+		<div id="sb6" class="side"></div>
+		<div id="sb7" class="up"></div>
+		<div id="sb8" class="bottom"></div>  
+		
+		<div id="s1" class="side"></div>
+		<div id="s2" class="side"></div>
+		<div id="s3" class="side"></div>
+		<div id="s4" class="side"></div>
+		<div id="s5" class="side"></div>
+		<div id="s6" class="side"></div>
+		<div id="s7" class="up"></div>
+		<div id="s8" class="bottom"></div>
+		
+		<div id="sf1" class="side"></div>
+		<div id="sf2" class="side"></div>
+		<div id="sf3" class="side"></div>
+		<div id="sf4" class="side"></div>
+		<div id="sf5" class="side"></div>
+		<div id="sf6" class="side"></div>
+		<div id="sf7" class="up"></div>
+		<div id="sf8" class="bottom"></div>  
+		
+		<div id="y1" class="ye"></div>
+		<div id="y2" class="ye"></div>
+		<div id="y3" class="ye"></div>
+		<div id="y4" class="ye"></div>
+		<div id="y5" class="ye"></div>
+		<div id="y6" class="ye"></div>
+		
+		<div id="y11" class="ye1"></div>
+		<div id="y12" class="ye1"></div>
+		<div id="y13" class="ye1"></div>
+		<div id="y14" class="ye1"></div>
+		<div id="y15" class="ye1"></div>
+		<div id="y16" class="ye1"></div>
+		
+		<div id="h1" class="hua"></div>
+		<div id="h2" class="hua"></div>
+		<div id="h3" class="hua"></div>
+		<div id="h4" class="hua"></div>
+		<div id="h5" class="hua"></div>
+		<div id="h6" class="hua"></div>
+		
+		<div id="d1" class="deng"></div>
+		<div id="d2" class="deng"></div>
+		<div id="d3" class="deng"></div>
+		<div id="d4" class="deng"></div>
+		<div id="d5" class="deng"></div>
+		<div id="d6" class="deng"></div>
+		
+		<div id="sn1" class="snow"></div>
+		<div id="sn2" class="snow"></div>
+		<div id="sn3" class="snow"></div>
+		<div id="sn4" class="snow"></div>
+		<div id="sn5" class="snow"></div>
+		<div id="sn6" class="snow"></div>
+		
+		<div id="sn11" class="snow"></div>
+		<div id="sn12" class="snow"></div>
+		<div id="sn13" class="snow"></div>
+		<div id="sn14" class="snow"></div>
+		<div id="sn15" class="snow"></div>
+		<div id="sn16" class="snow"></div>
+		
+		<div id="sn21" class="snow"></div>
+		<div id="sn22" class="snow"></div>
+		<div id="sn23" class="snow"></div>
+		<div id="sn24" class="snow"></div>
+		<div id="sn25" class="snow"></div>
+		<div id="sn26" class="snow"></div>
 
+	</div>
 </div>
 <div id="pic"></div>
+<div id="picinfo">向右滑动--></div>
 <div id="footer">Copyright © 2017~19 361all. All Rights Reserved.</div>
 </body>
 <script>
-	eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('F g(a,b){c(a>0)j a%b;c(a%b)j b-((-a)%b);j 0}F 19(m,s){c(s==U)s=1;m=2*q.T(m-0.5);m=1-m;m=m*s;c(m<0)j 0;c(m>1)j 1;j m}F V(m,s){c(s==U)s=1;m=m*s;m-=(s-1)*0.5;c(m<0)j 0;c(m>1)j 1;j m}F w(m,a,b){m=2*q.T(m-0.5);m=a+m*(b-a);c(m<0)j 0;c(m>1)j 1;j m}k v=e.f(\'1n\');k M=e.f(\'1o\');k P=Q R("1p.r","1x.r","1y.r","1z.r","1v.r","1w.r","1u.n","1d.n");k 13=Q R("1e.n","1k.n","1g.n","1h.n","1a.n","1b.n","1m.n","1j.n");k I=Q R("1","2","a","3","4","b");F 1l(a,b){k x=O(v.7[\'-K-H\'].A(\'W(\')[1].A(\'t\')[0])+(-b);c(x<-J)x=-J;c(x>J)x=J;k y=O(v.7[\'-K-H\'].A(\'X(\')[1].A(\'t\')[0])+(a);k z=O(v.7[\'-K-H\'].A(\'S(\')[1].A(\'t\')[0])+(a);z=-1c;v.7[\'H\']=v.7[\'-K-H\']="W("+x+"t) X("+y+"t) S("+z+"t)";k o=Z*4;u=w(1-(g(y+1t,o)/o),6,-15);L=V(1-(g(y,p)/p),1.5);11=w(1-(g(y,o)/o),0.8,-2.4);14=w(1-(g(y,o)/o),0.9,-4);18=w(1-(g(y,o)/o),0.8,-1.4);c(u==0)C=1;10{C=1-u;c(L>C)L=C};Y=w(1-(g(y-Z,o)/o),0.9,-8);c(u==0)M.7.D="B(\'E/"+I[g(q.G((y-N)/p),6)]+"s"+(g(q.G((y+N)/p),6)+1)+".r\')";10 M.7.D="B(\'E/1q"+(g(q.G((y+N)/p),6)+1)+".n\')";M.7.l=19(g(y+N,p)/p,1.5);16(k i=1;i<=8;i++){e.f(\'12\'+i).7.D="B(\'E/"+13[i-1]+"\')";e.f(\'12\'+i).7.l=u;e.f(\'s\'+i).7.D="B(\'E/"+I[g(q.G((y-p)/p),6)]+P[i-1]+"\')";e.f(\'17\'+i).7.D="B(\'E/"+I[g(q.G((y)/p),6)]+P[i-1]+"\')";e.f(\'s\'+i).7.l=L;e.f(\'17\'+i).7.l=C}16(k i=1;i<=6;i++){e.f(\'y\'+i).7.l=11;e.f(\'h\'+i).7.l=14;e.f(\'1f\'+i).7.l=18;e.f(\'d\'+i).7.l=u;e.f(\'1i\'+i).7.l=e.f(\'1s\'+i).7.l=e.f(\'1r\'+i).7.l=Y}};',62,98,'|||||||style|||||if||document|getElementById|mod|||return|var|opacity||png|cycle|60|Math|jpg||deg|dOpc|oMain|getOpacity3||||split|url|sbOpc|backgroundImage|img|function|floor|transform|imgn|20|webkit|sOpc|oPic|30|parseFloat|picn|new|Array|rotateZ|abs|null|getOpacity2|rotateX|rotateY|snOpc|360|else|yOpc|sf|piccn|hOpc||for|sb|y1Opc|getOpacity|cs5|cs6|90|bottom|cs1|y1|cs3|cs4|sn|cbottom|cs2|move|cup|main|pic|s1|cs|sn2|sn1|750|up|s5|s6|s2|s3|s4'.split('|'),0,{}));window.onload=function (){eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('k o=[];q T(n){k n=(2v n!="1E")?[n]:n;D(k i=0;i<n.v;i++){o[i]=1q 1p();o[i].1o="f/"+n[i]}}T(["1r.2","1u.2","1t.2","1s.2","1n.2","1i.2","1h.4","1g.4","1j.2","1m.2","1l.2","1k.2","1v.2","1G.2","1F.4","1H.4","1K.2","1J.2","1I.2","1D.2","1y.2","1x.2","1w.4","1z.4","1C.2","1B.2","1A.2","Z.2","Y.2","12.2","U.4","1c.4","1a.2","1f.2","1e.2","16.2","15.2","19.2","14.4","1d.4","1b.2","11.2","10.2","13.2","17.2","18.2","W.4","V.4","X.4","2r.4","2p.4","2w.4","2e.4","2d.4","2b.4","2i.4","J.4","P.4","I.4","S.4","z.4"]);k u=0;k R=2m(q(){H(u==o.v){2h(R);7.5(\'2j\').3.A="2l";7.5(\'2k\').3.A="K";7.5(\'2g\').3.A="K";x}u=0;D(k i=0;i<o.v;i++)H(o[i].2c)u++;7.5(\'2f\').2q="2u<2t>"+22(M*u/o.v)+"%"},M);r.3[\'8\']=r.3[\'-b-8\']="9(-2x) 2s(2o) e(2n)";D(k i=1;i<=6;i++){7.5(\'O\'+i).3[\'8\']=7.5(\'O\'+i).3[\'-b-8\']=7.5(\'s\'+i).3[\'8\']=7.5(\'s\'+i).3[\'-b-8\']=7.5(\'N\'+i).3[\'8\']=7.5(\'N\'+i).3[\'-b-8\']="9("+(-c+c*i)+"g) j(1T.1S) e(a)";7.5(\'y\'+i).3[\'8\']=7.5(\'y\'+i).3[\'-b-8\']="9("+(-c+c*i)+"g) j(1R) e(a) L(1W) 9(1V)";7.5(\'y\'+i).3.l="m(\'f/P.4\')";7.5(\'E\'+i).3[\'8\']=7.5(\'E\'+i).3[\'-b-8\']="9("+(-B+c*i)+"g) j(1U) e(a) L(1N) 9(1M)";7.5(\'E\'+i).3.l="m(\'f/I.4\')";7.5(\'d\'+i).3[\'8\']=7.5(\'d\'+i).3[\'-b-8\']="9("+(-B+c*i)+"g) j(1L) t(-1Q) 9(-a) e(a) ";7.5(\'d\'+i).3.l="m(\'f/J.4\')";7.5(\'h\'+i).3[\'8\']=7.5(\'h\'+i).3[\'-b-8\']="9("+(-B+c*i)+"g) j(1P) t(Q) 9(-a) e(a) ";7.5(\'h\'+i).3.l="m(\'f/S.4\')";7.5(\'C\'+i).3[\'8\']=7.5(\'C\'+i).3[\'-b-8\']="9("+(-20+c*i)+"g) j(1O) t(Q) 9(-a) e(a) ";7.5(\'C\'+i).3.l="m(\'f/z.4\')";7.5(\'G\'+i).3[\'8\']=7.5(\'G\'+i).3[\'-b-8\']="9("+(-1X+c*i)+"g) j(27) t(26) 9(-a) e(a) ";7.5(\'G\'+i).3.l="m(\'f/z.4\')";7.5(\'F\'+i).3[\'8\']=7.5(\'F\'+i).3[\'-b-8\']="9("+(c*i)+"g) j(25) t(2a) 9(-a) e(a) ";7.5(\'F\'+i).3.l="m(\'f/z.4\')"}r.29=q(p){x 28(p,w)};r.21=q(p){x 1Z(p,w)};r.1Y=q(p){x 24(p,w)};w(23,0);',62,158,'||jpg|style|png|getElementById||document|transform|rotateX|90deg|webkit|60||rotateZ|img|deg|||translateZ|var|backgroundImage|url|arr|newimages|ev|function|oMain||translateX|ready|length|move|return||snow|display|30|sn|for|y1|sn2|sn1|if|ye1|deng|block|translateY|100|sb|sf|ye|225px|imgLoad|hua|preloadimages|4up|bbottom|bup|cs1|4s5|4s4|bs3|bs2|4s6|bs4|aup|as5|as4|bs5|bs6|as6|as1|bs1|4bottom|abottom|as3|as2|1bottom|1up|1s6|2s1|2s4|2s3|2s2|1s5|src|Image|new|1s1|1s4|1s3|1s2|2s5|3up|3s6|3s5|3bottom|4s3|4s2|4s1|3s4|object|2up|2s6|2bottom|3s3|3s2|3s1|120px|122deg|95px|140px|50px|75px|283px|34px|159|274px|126deg|105px|40|onmousewheel|move1||ontouchstart|parseInt|360|move2|400px|295px|240px|move0|onmousedown|5px|cup|height|cs6|cs5|num|pic|clearInterval|cbottom|loading|main|none|setInterval|270deg|0deg|cs3|innerHTML|cs2|rotateY|br|加载中|typeof|cs4|20deg'.split('|'),0,{}))};eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('4 q(1,d){7 1=1||i.j;7 9=1.8;7 c=1.a;2.n=4(1){7 1=1||i.j;d(1.8-9,1.a-c);9=1.8;c=1.a};2.p=4(){2.n=f};h g}4 o(1,d){7 9=1.b[0].8;7 c=1.b[0].a;2.k=4(1){d(1.b[0].8-9,1.b[0].a-c);9=1.b[0].8;c=1.b[0].a};2.u=4(){2.v=f;2.k=f};h g}4 w(1,d){7 6=0;e(1.m){6=1.m/r;e(i.s)6=-6}t e(1.l){6=-1.l/3}e(6)d(5*6,0);h g}',33,33,'|ev|document||function||delta|var|clientX|disX|clientY|changedTouches|disY|mvfn|if|null|false|return|window|event|ontouchmove|detail|wheelDelta|onmousemove|move1|onmouseup|move0|120|opera|else|ontouchend|ontouchstart|move2'.split('|'),0,{}))
+	eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('G g(a,b){f(a>0)j a%b;f(a%b)j b-((-a)%b);j 0}G 19(m,s){f(s==Y)s=1;m=2*r.W(m-0.5);m=1-m;m=m*s;f(m<0)j 0;f(m>1)j 1;j m}G Z(m,s){f(s==Y)s=1;m=m*s;m-=(s-1)*0.5;f(m<0)j 0;f(m>1)j 1;j m}G t(m,a,b){m=2*r.W(m-0.5);m=a+m*(b-a);f(m<0)j 0;f(m>1)j 1;j m}l w=c.e(\'1s\');l L=c.e(\'1v\');l Q=R O("1k.q","1n.q","1o.q","1p.q","1l.q","1m.q","1t.n","1u.n");l 17=R O("1g.n","1q.n","1r.n","1a.n","1c.n","1d.n","1e.n","1b.n");l K=R O("1","2","a","3","4","b");G 1f(a,b){l x=P(w.7[\'-J-H\'].A(\'V(\')[1].A(\'u\')[0])+(-b);f(x<-I)x=-I;f(x>I)x=I;l y=P(w.7[\'-J-H\'].A(\'U(\')[1].A(\'u\')[0])+(a);l z=P(w.7[\'-J-H\'].A(\'T(\')[1].A(\'u\')[0])+(a);z=-1B;w.7[\'H\']=w.7[\'-J-H\']="V("+x+"u) U("+y+"u) T("+z+"u)";f(y<1w||y>1y)c.e(\'1D\').7.1A="1z";l k=X*4;v=t(1-(g(y+1x,k)/k),6,-15);M=Z(1-(g(y,p)/p),1.5);14=t(1-(g(y,k)/k),0.8,-2.4);13=t(1-(g(y,k)/k),0.9,-4);10=t(1-(g(y,k)/k),0.8,-1.4);f(v==0)E=1;S{E=1-v;f(M>E)M=E};18=t(1-(g(y-X,k)/k),0.9,-8);f(v==0)L.7.B="C(\'D/"+K[g(r.F((y-N)/p),6)]+"s"+(g(r.F((y+N)/p),6)+1)+".q\')";S L.7.B="C(\'D/1E"+(g(r.F((y+N)/p),6)+1)+".n\')";L.7.o=19(g(y+N,p)/p,1.5);16(l i=1;i<=8;i++){c.e(\'12\'+i).7.B="C(\'D/"+17[i-1]+"\')";c.e(\'12\'+i).7.o=v;c.e(\'s\'+i).7.B="C(\'D/"+K[g(r.F((y-p)/p),6)]+Q[i-1]+"\')";c.e(\'11\'+i).7.B="C(\'D/"+K[g(r.F((y)/p),6)]+Q[i-1]+"\')";c.e(\'s\'+i).7.o=M;c.e(\'11\'+i).7.o=E}16(l i=1;i<=6;i++){c.e(\'y\'+i).7.o=14;c.e(\'h\'+i).7.o=13;c.e(\'1C\'+i).7.o=10;c.e(\'d\'+i).7.o=v;c.e(\'1h\'+i).7.o=c.e(\'1j\'+i).7.o=c.e(\'1i\'+i).7.o=18;}};',62,103,'|||||||style|||||document||getElementById|if|mod|||return|cycle|var||png|opacity|60|jpg|Math||getOpacity3|deg|dOpc|oMain||||split|backgroundImage|url|img|sbOpc|floor|function|transform|20|webkit|imgn|oPic|sOpc|30|Array|parseFloat|picn|new|else|rotateZ|rotateY|rotateX|abs|360|null|getOpacity2|y1Opc|sb|sf|hOpc|yOpc||for|piccn|snOpc|getOpacity|cs4|cbottom|cs5|cs6|cup|move|cs1|sn|sn2|sn1|s1|s5|s6|s2|s3|s4|cs2|cs3|main|up|bottom|pic|250|750|500|none|display|90|y1|picinfo|cs'.split('|'),0,{}))
+    window.onload=function (){eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('k n=[];v T(o){k o=(2u o!="1F")?[o]:o;D(k i=0;i<o.w;i++){n[i]=1r 1q();n[i].1p="f/"+o[i]}}T(["1s.2","1v.2","1u.2","1t.2","1o.2","1j.2","1i.7","1h.7","1k.2","1n.2","1m.2","1l.2","1w.2","1H.2","1G.7","1I.7","1L.2","1K.2","1J.2","1E.2","1z.2","1y.2","1x.7","1A.7","1D.2","1C.2","1B.2","1g.2","Z.2","11.2","13.7","V.7","1c.2","1a.2","1f.2","1e.2","16.2","17.2","18.7","15.7","1d.2","Y.2","12.2","10.2","1b.2","19.2","14.7","W.7","X.7","U.7","2s.7","2t.7","2y.7","2g.7","2c.7","2d.7","L.7","K.7","I.7","S.7","B.7"]);k t=0;k Q=2k(v(){J(t==n.w){2f(Q);4.5(\'2j\').3.u="2i";4.5(\'2n\').3.u="A";4.5(\'2m\').3.u="A";4.5(\'2l\').3.u="A";4.5(\'2e\').3.u="A";x}t=0;D(k i=0;i<n.w;i++)J(n[i].2h)t++;4.5(\'2r\').2w="2v<23>"+2z(P*t/n.w)+"%"},P);q.3[\'8\']=q.3[\'-b-8\']="9(-2x) 2q(2p) e(2o)";D(k i=1;i<=6;i++){4.5(\'N\'+i).3[\'8\']=4.5(\'N\'+i).3[\'-b-8\']=4.5(\'s\'+i).3[\'8\']=4.5(\'s\'+i).3[\'-b-8\']=4.5(\'M\'+i).3[\'8\']=4.5(\'M\'+i).3[\'-b-8\']="9("+(-c+c*i)+"g) j(1U.1T) e(a)";4.5(\'y\'+i).3[\'8\']=4.5(\'y\'+i).3[\'-b-8\']="9("+(-c+c*i)+"g) j(1S) e(a) O(1X) 9(1W)";4.5(\'y\'+i).3.l="m(\'f/K.7\')";4.5(\'F\'+i).3[\'8\']=4.5(\'F\'+i).3[\'-b-8\']="9("+(-C+c*i)+"g) j(1V) e(a) O(1O) 9(1N)";4.5(\'F\'+i).3.l="m(\'f/I.7\')";4.5(\'d\'+i).3[\'8\']=4.5(\'d\'+i).3[\'-b-8\']="9("+(-C+c*i)+"g) j(1M) r(-1R) 9(-a) e(a) ";4.5(\'d\'+i).3.l="m(\'f/L.7\')";4.5(\'h\'+i).3[\'8\']=4.5(\'h\'+i).3[\'-b-8\']="9("+(-C+c*i)+"g) j(1Q) r(R) 9(-a) e(a) ";4.5(\'h\'+i).3.l="m(\'f/S.7\')";4.5(\'E\'+i).3[\'8\']=4.5(\'E\'+i).3[\'-b-8\']="9("+(-20+c*i)+"g) j(1P) r(R) 9(-a) e(a) ";4.5(\'E\'+i).3.l="m(\'f/B.7\')";4.5(\'H\'+i).3[\'8\']=4.5(\'H\'+i).3[\'-b-8\']="9("+(-1Y+c*i)+"g) j(28) r(27) 9(-a) e(a) ";4.5(\'H\'+i).3.l="m(\'f/B.7\')";4.5(\'G\'+i).3[\'8\']=4.5(\'G\'+i).3[\'-b-8\']="9("+(c*i)+"g) j(26) r(2b) 9(-a) e(a) ";4.5(\'G\'+i).3.l="m(\'f/B.7\')"}q.2a=v(p){x 29(p,z)};q.22=v(p){x 21(p,z)};q.1Z=v(p){x 25(p,z)};z(24,0);',62,160,'||jpg|style|document|getElementById||png|transform|rotateX|90deg|webkit|60||rotateZ|img|deg|||translateZ|var|backgroundImage|url|newimages|arr|ev|oMain|translateX||ready|display|function|length|return||move|block|snow|30|for|sn|y1|sn2|sn1|ye1|if|ye|deng|sb|sf|translateY|100|imgLoad|225px|hua|preloadimages|cs2|4bottom|bbottom|cs1|bs2|4s5|bs4|4s6|bs3|4up|bup|abottom|as5|as6|aup|bs6|as2|bs5|as1|bs1|as4|as3|4s4|1bottom|1up|1s6|2s1|2s4|2s3|2s2|1s5|src|Image|new|1s1|1s4|1s3|1s2|2s5|3up|3s6|3s5|3bottom|4s3|4s2|4s1|3s4|object|2up|2s6|2bottom|3s3|3s2|3s1|120px|122deg|95px|140px|50px|75px|283px|34px|159|274px|126deg|105px|40|onmousewheel||move1|ontouchstart|br|360|move2|400px|295px|240px|move0|onmousedown|5px|cup|cbottom|picinfo|clearInterval|cs6|height|none|loading|setInterval|pic|main|box|270deg|0deg|rotateY|num|cs3|cs4|typeof|加载中|innerHTML|20deg|cs5|parseInt'.split('|'),0,{}));}
+    eval(function(p,a,c,k,e,d){e=function(c){return(c<a?"":e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)d[e(c)]=k[c]||e(c);k=[function(e){return d[e]}];e=function(){return'\\w+'};c=1;};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p;}('4 q(1,d){7 1=1||i.j;7 9=1.8;7 c=1.a;2.n=4(1){7 1=1||i.j;d(1.8-9,1.a-c);9=1.8;c=1.a};2.p=4(){2.n=f};h g}4 o(1,d){7 9=1.b[0].8;7 c=1.b[0].a;2.k=4(1){d(1.b[0].8-9,1.b[0].a-c);9=1.b[0].8;c=1.b[0].a};2.u=4(){2.v=f;2.k=f};h g}4 w(1,d){7 6=0;e(1.m){6=1.m/r;e(i.s)6=-6}t e(1.l){6=-1.l/3}e(6)d(5*6,0);h g}',33,33,'|ev|document||function||delta|var|clientX|disX|clientY|changedTouches|disY|mvfn|if|null|false|return|window|event|ontouchmove|detail|wheelDelta|onmousemove|move1|onmouseup|move0|120|opera|else|ontouchend|ontouchstart|move2'.split('|'),0,{}))
 </script>
 </html>
