--- a/s/3/index.html
+++ b/s/3/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=0.5">
-    <title>长江</title>
+    <title>长江万里图</title>
 	 <style type="text/css">
   *{
 		margin: 0;
@@ -225,13 +225,13 @@
 		-webkit-animation: fz 10s linear 0s normal;
 	}
 	@keyframes fz {
-		0%{ top: 250px; }
-		80%{ top: 50px; }
+		0%{ top: 480px; height:50px;}
+		100%{ top: 50px; height:480px;}
 	}
 	
 	@-webkit-keyframes fz{
-		0%{ top: 250px; }
-		80%{ top: 50px; }
+		0%{ top: 480px; height:50px;}
+		100%{ top: 50px; height:480px;}
 	}
 	
 	
@@ -392,15 +392,16 @@ window.onload=function (){
 /*******************************/
 	
 	var picjson=[
-{ "dis":350,"width":1760,"background":"url(img/bg1.jpg)"},
+	{ "dis":350,"width":1760,"background":"url(img/bg1.jpg)"},
 	{ "dis":0,"width":60,"top":260,"class":"build","background":"url(img/ys.png) no-repeat"},
 	{ "dis":-50,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_ys_wcgzm.png) no-repeat"},
 	{ "dis":1320,"width":660,"top":528,"class":"build","background":"url(img/ys_wcgzm.png) no-repeat","bgleft":50},
 	{ "dis":-20,"width":60,"top":260,"class":"build","background":"url(img/lz.png) no-repeat"},
-	{ "dis":20,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_lz_bet.png) no-repeat"},
+	{ "dis":100,"width":50,"height":50,"top":600,"class":"point","background":"url(img/point.gif) no-repeat","info":"url(img/info_lz_bet.png) no-repeat"},
+	{ "dis":-80,"width":211,"height":480,"top":50,"class":"fz","background":"url(img/fz.gif) no-repeat","bgleft":50},
 	{ "dis":40,"width":273,"top":327,"class":"build","background":"url(img/lz_bet.png) no-repeat","bgleft":0},
 	{ "dis":0,"width":200,"top":765,"class":"yuer","background":"url(img/jiangtun.gif) no-repeat","bgleft":50},	
-	{ "dis":0,"width":211,"top":50,"class":"fz","background":"url(img/fz.gif) no-repeat","bgleft":50},
+	
 	
 	{ "dis":1100,"width":2320,"background":"url(img/bg2.jpg)"},
 	{ "dis":300,"width":60,"top":260,"class":"build","background":"url(img/cq.png) no-repeat"},
