--- a/t/index.html
+++ b/t/index.html
@@ -220,7 +220,7 @@ window.onload = function(){
 			
 			<img class="vimg" id="pauseplay" src="play-button.png" >	
 		</img>
-		<video id="v1" width="848" height="500" x5-video-player-type="h5" x5-video-orientation="landscape|portrait" style="margin-top:15px;object-fit: fill;">
+		<video id="v1" width="848" x5-video-player-type="h5" x5-video-orientation="landscape|portrait" style="margin-top:15px;object-fit: fill;">
 			<source src="ttsj1.mp4" type="video/mp4" />
 			<source src="ttsj1.ogg" type="video/ogg" />
 			Your browser does not support HTML5 video.
