--- a/t/index.html
+++ b/t/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta name="viewport" content="width=device-width">
+<meta name="viewport" content="width=device-width initial-scale=0.6667">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>雨霖铃</title>
 <link href="0.css" rel="stylesheet" />
@@ -239,7 +239,7 @@ function isWeiXin(){
 			<img class="vimg" id="pauseplay" src="play-button.png" > 
 		</div>
 		
-		<video id="v1"  width="848" x5-video-player-type="h5" x5-video-orientation="landscape|portrait" style="object-fit: fill;">
+		<video id="v1"  width="848" height="500" x5-video-player-type="h5" x5-video-orientation="landscape|portrait" style="object-fit: fill;">
 			<source src="ttsj1.mp4" type="video/mp4" />
 			<source src="ttsj1.ogg" type="video/ogg" />
 			Your browser does not support HTML5 video.
