--- a/t/index.html
+++ b/t/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta id="view" name="viewport">
+<meta id="view" name="viewport" content="width=device-width, initial-scale=0.5">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>雨霖铃</title>
 <link href="0.css" rel="stylesheet" />
 <script>
 
 window.onload = function(){
-	scalex=0.5*848/window.screen.availWidth;
+	/*scalex=0.5*848/window.screen.availWidth;
 	scaley=0.5*848/window.screen.availHeight;
 	scale=(scalex<scaley)?scalex:scaley;
-	console.log(scalex+" "+ scaley+" "+ scale);
-	document.getElementById("view").setAttribute('content','user-scalable=yes, initial-scale='+scale.toFixed(2));
+	//console.log(scalex+" "+ scaley+" "+ scale);
+	document.getElementById("view").setAttribute('content','user-scalable=yes, initial-scale='+scale.toFixed(2));*/
 	var oV = document.getElementById('v1');
 	var aInput = document.getElementsByTagName('input');
 	var oPauseplay = document.getElementById('pauseplay');
